--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <img src="images/hero.jpg" alt="Cassio Vilacorta" class="hero-bg">
     <div class="hero-content">
       <h1>Cassio Vilacorta</h1>
-      <p>Fotógrafo & Artista Visual</p>
+      <p>Cassio Vilacorta é cantor, compositor, produtor musical e multi-instrumentista paraense. Suas canções são construídas com olhar intimista e emocional, resgatando a sensibilidade poética da música brasileira dos anos 1980 a 2000 — mas com uma linguagem atual e viva. Através de metáforas sutis e vocabulário cotidiano, constrói pontes entre o afeto de ontem e o agora.</p>
+
+<p>Em 2025, deu início à sua fase solo com uma apresentação marcante na Ilha de Cotijuba, durante o evento “Verão em Ordem”. O show revelou uma performance segura, sensível e comprometida com o momento — abrindo um novo capítulo em sua trajetória.</p>
+
       <a href="#contato" class="btn">Contato</a>
     </div>
   </header>
