--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
       <a href="#contato" class="btn">Contato</a>
     </div>
   </header>
+  <!-- PORTFÓLIO - Instagram Feed -->
+  <section id="portfolio" style="padding: 40px 20px; text-align: center;">
+    <h2>Portfólio</h2>
+    <iframe src="https://lightwidget.com/widgets/9e734b08e0f25a82a7f5f0c1c8242b2c.html" 
+      scrolling="no" 
+      allowtransparency="true" 
+      class="lightwidget-widget" 
+      style="width:100%;border:0;overflow:hidden;">
+    </iframe>
+  </section>
 
 </body>
+  
 </html>
