--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
       <h1>Cassio Vilacorta</h1>
       <p>Cassio Vilacorta é cantor, compositor, produtor musical e multi-instrumentista paraense. Suas canções são construídas com olhar intimista e emocional, resgatando a sensibilidade poética da música brasileira dos anos 1980 a 2000 — mas com uma linguagem atual e viva. Através de metáforas sutis e vocabulário cotidiano, constrói pontes entre o afeto de ontem e o agora.</p>
 
-<p>Em 2025, deu início à sua fase solo com uma apresentação marcante na Ilha de Cotijuba, durante o evento “Verão em Ordem”. O show revelou uma performance segura, sensível e comprometida com o momento — abrindo um novo capítulo em sua trajetória.</p>
+      <p>Em 2025, deu início à sua fase solo com uma apresentação marcante na Ilha de Cotijuba, durante o evento “Verão em Ordem”. O show revelou uma performance segura, sensível e comprometida com o momento — abrindo um novo capítulo em sua trajetória.</p>
 
       <a href="#contato" class="btn">Contato</a>
     </div>
   </header>
+
   <!-- PORTFÓLIO - Instagram Feed -->
   <section id="portfolio" style="padding: 40px 20px; text-align: center;">
     <h2>Portfólio</h2>
-    <iframe src="https://lightwidget.com/widgets/9e734b08e0f25a82a7f5f0c1c8242b2c.html" 
-      scrolling="no" 
-      allowtransparency="true" 
-      class="lightwidget-widget" 
+    <!-- LightWidget WIDGET -->
+    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+    <iframe src="//lightwidget.com/widgets/2197cc555be55c7689931f341422c134.html"
+      scrolling="no"
+      allowtransparency="true"
+      class="lightwidget-widget"
       style="width:100%;border:0;overflow:hidden;">
     </iframe>
   </section>
 
 </body>
-  
 </html>
