--- a/index.html
+++ b/index.html
@@ -21,17 +21,13 @@
     </div>
   </header>
 
-  <!-- PORTFÓLIO - Instagram Feed -->
+  <!-- PORTFÓLIO - Instagram Feed via Elfsight -->
   <section id="portfolio" style="padding: 40px 20px; text-align: center;">
     <h2>Portfólio</h2>
-    <!-- LightWidget WIDGET -->
-    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-    <iframe src="//lightwidget.com/widgets/2197cc555be55c7689931f341422c134.html"
-      scrolling="no"
-      allowtransparency="true"
-      class="lightwidget-widget"
-      style="width:100%;border:0;overflow:hidden;">
-    </iframe>
+    
+    <!-- Código do widget Elfsight -->
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div class="elfsight-app-b2820c20-58b4-40c5-af03-43a65b82f0dc" data-elfsight-app-lazy></div>
   </section>
 
 </body>
