--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
-<!-- HERO SECTION -->
-<header class="hero">
-  <img src="images/hero.jpg" alt="Cassio Vilacorta" class="hero-bg">
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cassio Vilacorta</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-  <div class="hero-content">
-    <div class="hero-name-box">
-      <h1 class="hero-name">CASSIO VILACORTA</h1>
+  <!-- HERO SECTION -->
+  <header class="hero">
+    <img src="images/hero.jpg" alt="Cassio Vilacorta" class="hero-bg">
+
+    <div class="hero-content">
+      <div class="hero-name-box">
+        <h1 class="hero-name">CASSIO VILACORTA</h1>
+      </div>
+
+      <p class="hero-subtitle">Cantor, compositor e artista visual paraense</p>
+
+      <p class="hero-intro">
+        Este site é um mergulho no universo de Cassio Vilacorta — onde música, afeto e poesia se encontram em melodias sensíveis, letras viscerais e momentos ao vivo.
+      </p>
+
+      <p class="hero-description">
+        Suas canções nascem de um olhar íntimo sobre o cotidiano e as emoções. Com influência da música brasileira dos anos 1980 a 2000, Cassio atualiza essa tradição com linguagem pulsante e contemporânea.<br><br>
+        Em 2025, iniciou sua fase solo com uma apresentação marcante na Ilha de Cotijuba, durante o evento “Verão em Ordem” — abrindo um novo capítulo em sua trajetória artística.
+      </p>
+
+      <a href="#contato" class="btn">Contato</a>
     </div>
+  </header>
 
-    <p class="hero-subtitle">Cantor, compositor e artista visual paraense</p>
-
-    <p class="hero-intro">
-      Este site é um mergulho no universo de Cassio Vilacorta — onde música, afeto e poesia se encontram em melodias sensíveis, letras viscerais e momentos ao vivo.
-    </p>
-
-    <p class="hero-description">
-      Suas canções nascem de um olhar íntimo sobre o cotidiano e as emoções. Com influência da música brasileira dos anos 1980 a 2000, Cassio atualiza essa tradição com linguagem pulsante e contemporânea.<br><br>
-      Em 2025, iniciou sua fase solo com uma apresentação marcante na Ilha de Cotijuba, durante o evento “Verão em Ordem” — abrindo um novo capítulo em sua trajetória artística.
-    </p>
-
-    <a href="#contato" class="btn">Contato</a>
-  </div>
-</header>
-
-  <!-- PORTFÓLIO - Instagram Feed via Elfsight -->
+  <!-- PORTFÓLIO - Instagram Feed (via Elfsight) -->
   <section id="portfolio" style="padding: 40px 20px; text-align: center;">
     <h2>Portfólio</h2>
-    
-    <!-- Código do widget Elfsight -->
+    <!-- Elfsight Instagram Feed -->
     <script src="https://static.elfsight.com/platform/platform.js" async></script>
     <div class="elfsight-app-b2820c20-58b4-40c5-af03-43a65b82f0dc" data-elfsight-app-lazy></div>
   </section>
