--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cassio Vilacorta</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- Fontes personalizadas -->
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -13,26 +17,29 @@
     <img src="images/hero.jpg" alt="Cassio Vilacorta" class="hero-bg">
 
     <div class="hero-content">
-      <div class="hero-name-box">
-        <h1 class="hero-name">CASSIO VILACORTA</h1>
+      <h1 class="hero-title">Cassio Vilacorta</h1>
+
+      <div class="hero-box">
+        <p class="intro">Seja bem-vindo ao universo musical de Cassio Vilacorta — onde a poesia encontra o som.</p>
+
+        <p class="bio">
+          Cassio Vilacorta é cantor, compositor e multi-instrumentista paraense. Suas canções revelam um olhar íntimo sobre o cotidiano, unindo sensibilidade, poesia e ritmo.
+        </p>
+
+        <p class="bio">
+          Inspirado pela música brasileira das décadas de 80 a 2000, traz em suas composições uma linguagem atual, viva e emocional — que conecta passado e presente com leveza.
+        </p>
+
+        <p class="bio">
+          Em 2025, iniciou sua trajetória solo com um show marcante na Ilha de Cotijuba, revelando uma nova fase artística, mais madura e conectada com seu tempo.
+        </p>
       </div>
-
-      <p class="hero-subtitle">Cantor, compositor e artista visual paraense</p>
-
-      <p class="hero-intro">
-        Este site é um mergulho no universo de Cassio Vilacorta — onde música, afeto e poesia se encontram em melodias sensíveis, letras viscerais e momentos ao vivo.
-      </p>
-
-      <p class="hero-description">
-        Suas canções nascem de um olhar íntimo sobre o cotidiano e as emoções. Com influência da música brasileira dos anos 1980 a 2000, Cassio atualiza essa tradição com linguagem pulsante e contemporânea.<br><br>
-        Em 2025, iniciou sua fase solo com uma apresentação marcante na Ilha de Cotijuba, durante o evento “Verão em Ordem” — abrindo um novo capítulo em sua trajetória artística.
-      </p>
 
       <a href="#contato" class="btn">Contato</a>
     </div>
   </header>
 
-  <!-- PORTFÓLIO - Instagram Feed (via Elfsight) -->
+  <!-- INSTAGRAM PORTFÓLIO -->
   <section id="portfolio" style="padding: 40px 20px; text-align: center;">
     <h2>Portfólio</h2>
     <!-- Elfsight Instagram Feed -->
