--- a/index.html
+++ b/index.html
@@ -19,23 +19,15 @@
     <div class="hero-content">
       <h1 class="hero-title">Cassio Vilacorta</h1>
 
-<p class="welcome-text">
-  Seja bem-vindo ao universo musical de Cassio Vilacorta — onde a poesia encontra o som.
-</p>
+      <p class="welcome-text">
+        Seja bem-vindo ao universo musical de Cassio Vilacorta — onde a poesia encontra o som.
+      </p>
 
-<div class="hero-box">
-  <p class="bio">
-    Cassio Vilacorta é cantor, compositor e multi-instrumentista paraense. Suas canções revelam um olhar íntimo sobre o cotidiano, unindo sensibilidade, poesia e ritmo.
-  </p>
-
-  <p class="bio">
-    Inspirado pela música gringa das décadas de 1980 a 2000, traz em suas composições uma linguagem atual, viva e emocional — que conecta passado e presente com leveza.
-  </p>
-
-  <p class="bio">
-    Em 2025, iniciou sua trajetória solo com um show marcante na Ilha de Cotijuba, revelando uma nova fase artística, mais madura e conectada com seu tempo.
-  </p>
-</div>
+      <div class="hero-box">
+        <p class="bio">
+          Cassio Vilacorta é cantor, compositor e multi-instrumentista paraense. Suas canções revelam um olhar íntimo sobre o cotidiano, unindo sensibilidade, poesia e ritmo. Inspirado pela música gringa das décadas de 1980 a 2000, traz em suas composições uma linguagem atual, viva e emocional — que conecta passado e presente com leveza. Em 2025, iniciou sua trajetória solo com um show marcante na Ilha de Cotijuba, revelando uma nova fase artística, mais madura e conectada com seu tempo.
+        </p>
+      </div>
 
       <a href="#contato" class="btn">Contato</a>
     </div>
