--- a/index.html
+++ b/index.html
@@ -5,33 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cassio Vilacorta</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- Fontes personalizadas -->
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <!-- HERO SECTION -->
   <header class="hero">
     <img src="images/hero.jpg" alt="Cassio Vilacorta" class="hero-bg">
+
     <div class="hero-content">
-      <!-- Texto de boas-vindas -->
-      <p class="welcome-text">Seja bem-vindo ao universo musical de Cassio Vilacorta — onde a poesia encontra o som.</p>
+      <h1 class="hero-title">Cassio Vilacorta</h1>
+
+      <p class="welcome-text">
+        Seja bem-vindo ao universo musical de Cassio Vilacorta — onde a poesia encontra o som.
+      </p>
+
+      <div class="hero-box">
+        <p class="bio">
+          Cassio Vilacorta é cantor, compositor e multi-instrumentista paraense. Suas canções revelam um olhar íntimo sobre o cotidiano, unindo sensibilidade, poesia e ritmo. Inspirado pela música gringa das décadas de 1980 a 2000, traz em suas composições uma linguagem atual, viva e emocional — que conecta passado e presente com leveza. Em 2025, iniciou sua trajetória solo com um show marcante na Ilha de Cotijuba, revelando uma nova fase artística, mais madura e conectada com seu tempo.
+        </p>
+      </div>
+
       <a href="#contato" class="btn">Contato</a>
     </div>
   </header>
 
-  <!-- PORTFÓLIO - Instagram Feed -->
+  <!-- INSTAGRAM PORTFÓLIO -->
   <section id="portfolio" style="padding: 40px 20px; text-align: center;">
     <h2>Portfólio</h2>
-    <iframe src="https://lightwidget.com/widgets/9e734b08e0f25a82a7f5f0c1c8242b2c.html" 
-      scrolling="no" 
-      allowtransparency="true" 
-      class="lightwidget-widget" 
-      style="width:100%;border:0;overflow:hidden;">
-    </iframe>
+    <!-- Elfsight Instagram Feed -->
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div class="elfsight-app-b2820c20-58b4-40c5-af03-43a65b82f0dc" data-elfsight-app-lazy></div>
   </section>
-
-  <!-- LightWidget WIDGET -->
-  <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-  <iframe src="//lightwidget.com/widgets/2197cc555be55c7689931f341422c134.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 
 </body>
 </html>
