--- a/index.html
+++ b/index.html
@@ -5,41 +5,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cassio Vilacorta</title>
   <link rel="stylesheet" href="style.css">
-
-  <!-- Fontes personalizadas -->
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <!-- HERO SECTION -->
   <header class="hero">
     <img src="images/hero.jpg" alt="Cassio Vilacorta" class="hero-bg">
-
     <div class="hero-content">
-      <h1 class="hero-title">Cassio Vilacorta</h1>
-
       <p class="welcome-text">
         Seja bem-vindo ao universo musical de Cassio Vilacorta — onde a poesia encontra o som.
       </p>
-
-      <div class="hero-box">
-        <p class="bio">
-          Cassio Vilacorta é cantor, compositor e multi-instrumentista paraense. Suas canções revelam um olhar íntimo sobre o cotidiano, unindo sensibilidade, poesia e ritmo. Inspirado pela música gringa das décadas de 1980 a 2000, traz em suas composições uma linguagem atual, viva e emocional — que conecta passado e presente com leveza. Em 2025, iniciou sua trajetória solo com um show marcante na Ilha de Cotijuba, revelando uma nova fase artística, mais madura e conectada com seu tempo.
-        </p>
-      </div>
-
       <a href="#contato" class="btn">Contato</a>
     </div>
   </header>
 
-  <!-- INSTAGRAM PORTFÓLIO -->
+  <!-- BIOGRAFIA COM IMAGENS -->
+  <section id="biografia" style="padding: 40px 20px; text-align: center;">
+    <h2>Biografia</h2>
+
+    <div class="bio-gallery">
+
+      <!-- BLOCO 1 -->
+      <div class="bio-item">
+        <img src="images/cotijuba.jpg" alt="Show solo em Cotijuba">
+        <div class="bio-caption">
+          <h3>Ilha de Cotijuba — Verão em Ordem (2025)</h3>
+          <p>Show solo marcando o início da nova fase artística. Performance sensível e conectada com o presente.</p>
+        </div>
+      </div>
+
+      <!-- BLOCO 2 -->
+      <div class="bio-item">
+        <img src="images/les-sumanos.jpg" alt="Les Sumanos">
+        <div class="bio-caption">
+          <h3>Banda Les Sumanos (2016–2018)</h3>
+          <p>FALTA DESCRIÇÃO — Coletivo musical e festivais em Belém. Experiência inicial no palco.</p>
+        </div>
+      </div>
+
+      <!-- BLOCO 3 -->
+      <div class="bio-item">
+        <img src="images/paralelo53.jpg" alt="Paralelo 53">
+        <div class="bio-caption">
+          <h3>Paralelo 53 (2024–2025)</h3>
+          <p>FALTA DESCRIÇÃO — Projeto com shows no Sul do Brasil e lançamento de álbum em Pelotas.</p>
+        </div>
+      </div>
+
+      <!-- BLOCO 4 (opcional/futuro) -->
+      <div class="bio-item">
+        <img src="images/foto4.jpg" alt="Outro momento">
+        <div class="bio-caption">
+          <h3>Título do Momento (ANO)</h3>
+          <p>FALTA DESCRIÇÃO</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- PORTFÓLIO - Elfsight -->
   <section id="portfolio" style="padding: 40px 20px; text-align: center;">
     <h2>Portfólio</h2>
-    <!-- Elfsight Instagram Feed -->
-    <script src="https://static.elfsight.com/platform/platform.js" async></script>
     <div class="elfsight-app-b2820c20-58b4-40c5-af03-43a65b82f0dc" data-elfsight-app-lazy></div>
   </section>
+
+  <!-- CONTATO -->
+  <section id="contato" style="padding: 40px 20px; text-align: center;">
+    <h2>Contato</h2>
+    <p>Entre em contato pelo Instagram: <a href="https://instagram.com/cassio_vilacorta" target="_blank">@cassio_vilacorta</a></p>
+    <p>Ou envie um e-mail para: <strong>cassio@email.com</strong></p>
+  </section>
+
+  <!-- LightWidget Script (mantido para compatibilidade futura, se quiser usar além do Elfsight) -->
+  <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
 
 </body>
 </html>
