--- a/index.html
+++ b/index.html
@@ -5,80 +5,89 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cassio Vilacorta</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
+  <!-- MENU SUPERIOR -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="#inicio">Início</a></li>
+      <li><a href="#biografia">Biografia</a></li>
+      <li><a href="#tour">Agenda</a></li>
+      <li><a href="#midia">Mídia</a></li>
+      <li><a href="#contato">Contato</a></li>
+    </ul>
+  </nav>
+
   <!-- HERO SECTION -->
-  <header class="hero">
-    <img src="images/hero.jpg" alt="Cassio Vilacorta" class="hero-bg">
+  <header class="hero" id="inicio">
+    <img src="images/hero.jpg" alt="Imagem de fundo" class="hero-bg">
     <div class="hero-content">
-      <p class="welcome-text">
-        Seja bem-vindo ao universo musical de Cassio Vilacorta — onde a poesia encontra o som.
-      </p>
-      <a href="#contato" class="btn">Contato</a>
+      <p class="welcome-text">Seja bem-vindo ao universo musical de Cassio Vilacorta — onde a poesia encontra o som.</p>
     </div>
   </header>
 
-  <!-- BIOGRAFIA COM IMAGENS -->
-  <section id="biografia" style="padding: 40px 20px; text-align: center;">
+  <!-- BIOGRAFIA -->
+  <section id="biografia">
     <h2>Biografia</h2>
-
     <div class="bio-gallery">
 
-      <!-- BLOCO 1 -->
       <div class="bio-item">
-        <img src="images/cotijuba.jpg" alt="Show solo em Cotijuba">
+        <img src="images/cotijuba.jpg" alt="Show Cotijuba">
         <div class="bio-caption">
           <h3>Ilha de Cotijuba — Verão em Ordem (2025)</h3>
-          <p>Show solo marcando o início da nova fase artística. Performance sensível e conectada com o presente.</p>
+          <p>Início da fase solo. Performance sensível e marcante.</p>
         </div>
       </div>
 
-      <!-- BLOCO 2 -->
       <div class="bio-item">
         <img src="images/les-sumanos.jpg" alt="Les Sumanos">
         <div class="bio-caption">
           <h3>Banda Les Sumanos (2016–2018)</h3>
-          <p>FALTA DESCRIÇÃO — Coletivo musical e festivais em Belém. Experiência inicial no palco.</p>
+          <p><!-- FALTA DESCRIÇÃO --></p>
         </div>
       </div>
 
-      <!-- BLOCO 3 -->
       <div class="bio-item">
         <img src="images/paralelo53.jpg" alt="Paralelo 53">
         <div class="bio-caption">
           <h3>Paralelo 53 (2024–2025)</h3>
-          <p>FALTA DESCRIÇÃO — Projeto com shows no Sul do Brasil e lançamento de álbum em Pelotas.</p>
-        </div>
-      </div>
-
-      <!-- BLOCO 4 (opcional/futuro) -->
-      <div class="bio-item">
-        <img src="images/foto4.jpg" alt="Outro momento">
-        <div class="bio-caption">
-          <h3>Título do Momento (ANO)</h3>
-          <p>FALTA DESCRIÇÃO</p>
+          <p><!-- FALTA DESCRIÇÃO --></p>
         </div>
       </div>
 
     </div>
   </section>
 
-  <!-- PORTFÓLIO - Elfsight -->
-  <section id="portfolio" style="padding: 40px 20px; text-align: center;">
-    <h2>Portfólio</h2>
-    <div class="elfsight-app-b2820c20-58b4-40c5-af03-43a65b82f0dc" data-elfsight-app-lazy></div>
+  <!-- AGENDA / TOUR -->
+  <section id="tour">
+    <h2>Agenda</h2>
+    <p><!-- FALTA INSERIR DATAS DE SHOWS / TURNÊS --></p>
+  </section>
+
+  <!-- MÍDIA -->
+  <section id="midia">
+    <h2>Mídia</h2>
+    <div class="media-grid">
+      <!-- YouTube -->
+      <iframe width="360" height="215" src="https://www.youtube.com/embed/SEU_VIDEO" frameborder="0" allowfullscreen></iframe>
+      <!-- Spotify -->
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/SEU_ID" width="360" height="152" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
   </section>
 
   <!-- CONTATO -->
-  <section id="contato" style="padding: 40px 20px; text-align: center;">
+  <section id="contato">
     <h2>Contato</h2>
-    <p>Entre em contato pelo Instagram: <a href="https://instagram.com/cassio_vilacorta" target="_blank">@cassio_vilacorta</a></p>
-    <p>Ou envie um e-mail para: <strong>cassio@email.com</strong></p>
+    <p>Siga no Instagram: <a href="https://instagram.com/cassio_vilacorta" target="_blank">@cassio_vilacorta</a></p>
+    <p>E-mail: cassio@email.com</p>
   </section>
 
-  <!-- LightWidget Script (mantido para compatibilidade futura, se quiser usar além do Elfsight) -->
-  <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+  <!-- RODAPÉ -->
+  <footer>
+    <p>&copy; 2025 Cassio Vilacorta – Todos os direitos reservados.</p>
+  </footer>
 
 </body>
 </html>
