--- a/index.html
+++ b/index.html
@@ -5,24 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cassio Vilacorta</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- MENU SUPERIOR -->
-  <nav class="navbar">
-    <ul>
-      <li><a href="#inicio">Início</a></li>
-      <li><a href="#biografia">Biografia</a></li>
-      <li><a href="#tour">Agenda</a></li>
-      <li><a href="#midia">Mídia</a></li>
-      <li><a href="#contato">Contato</a></li>
-    </ul>
-  </nav>
-
   <!-- HERO SECTION -->
-  <header class="hero" id="inicio">
-    <img src="images/hero.jpg" alt="Imagem de fundo" class="hero-bg">
+  <header class="hero">
+    <img src="images/hero.jpg" alt="Cassio Vilacorta" class="hero-bg">
     <div class="hero-content">
       <p class="welcome-text">Seja bem-vindo ao universo musical de Cassio Vilacorta — onde a poesia encontra o som.</p>
     </div>
@@ -45,7 +33,7 @@
         <img src="images/les-sumanos.jpg" alt="Les Sumanos">
         <div class="bio-caption">
           <h3>Banda Les Sumanos (2016–2018)</h3>
-          <p><!-- FALTA DESCRIÇÃO --></p>
+          <p>FALTA DESCRIÇÃO — Coletivo musical e festivais em Belém. Experiência inicial no palco.</p>
         </div>
       </div>
 
@@ -53,7 +41,7 @@
         <img src="images/paralelo53.jpg" alt="Paralelo 53">
         <div class="bio-caption">
           <h3>Paralelo 53 (2024–2025)</h3>
-          <p><!-- FALTA DESCRIÇÃO --></p>
+          <p>FALTA DESCRIÇÃO — Projeto com shows no Sul do Brasil e lançamento de álbum em Pelotas.</p>
         </div>
       </div>
 
@@ -63,16 +51,14 @@
   <!-- AGENDA / TOUR -->
   <section id="tour">
     <h2>Agenda</h2>
-    <p><!-- FALTA INSERIR DATAS DE SHOWS / TURNÊS --></p>
+    <p>FALTA INSERIR DATAS DE SHOWS / TURNÊS</p>
   </section>
 
   <!-- MÍDIA -->
   <section id="midia">
     <h2>Mídia</h2>
     <div class="media-grid">
-      <!-- YouTube -->
       <iframe width="360" height="215" src="https://www.youtube.com/embed/SEU_VIDEO" frameborder="0" allowfullscreen></iframe>
-      <!-- Spotify -->
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/SEU_ID" width="360" height="152" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
   </section>
