--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 --mobile-nav-background-color-l: 13;
 --mobile-nav-background-color-a: 1.0;
 --page-title-type-enum: logo;
---page-title-logo-background-image: url("//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/73312be2f6c73ce185babb5e90d72a204bb09d91/original/jon-gomm-signature-logo.png/!!/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.png");
+--page-title-logo-background-image: url("images/logos/Cassio Vilacorta Cartão de visita.png");
 --page-title-string: "Jon Gomm";
 --page-title-logo-size-number: 19%;
 --page-title-logo-size-number-unitless: 19;
