--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 --mobile-nav-background-color-l: 13;
 --mobile-nav-background-color-a: 1.0;
 --page-title-type-enum: logo;
---page-title-logo-background-image: url("images/logos/Cassio Vilacorta Cartão de visita.png");
+--page-title-logo-background-image: url("images/logos/cassio-vilacorta-logo.png");
 --page-title-string: "Jon Gomm";
 --page-title-logo-size-number: 19%;
 --page-title-logo-size-number-unitless: 19;
@@ -691,7 +691,7 @@
 			<div class="title-nav-container" multiple-line underline>
 				<div id="title-wrap" class="title-wrap"
 						data-apply-textfit="false">
-					<h1 id="page-title" class="page-title display-type-logo text-fit"><a href="/news"><span class="outer" data-max-font-size="48"><span class="inner"><img src="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/73312be2f6c73ce185babb5e90d72a204bb09d91/original/jon-gomm-signature-logo.png/!!/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.png" alt="Jon Gomm"></span></span></a></h1>
+					<h1 id="page-title" class="page-title display-type-logo text-fit"><a href="/"><span class="outer"><span class="inner"><img src="images/logos/cassio-vilacorta-logo.png" alt="Cassio Vilacorta"></span></span></a></h1>
 				</div>
 
 				<div class="nav-bar">
