--- a/index.html
+++ b/index.html
@@ -702,38 +702,32 @@
 
 			<div class="media-cta-container">
 				<div id="page_media_container" class="page-media-wrapper">
-      <media-background-container class="moda m-page-media m-media m-bordered m-cut-corner m-clipped m-shape m-masked page-photos page-media-container" interval="fast" speed="slow" transition="fade" style="--media-background-color: #000000">
-  <media-background crop-rect="{&quot;x&quot;:0,&quot;y&quot;:2522.2274987722985,&quot;w&quot;:3745.945945945946,&quot;h&quot;:932.4324324324324}" focal-point="{&quot;x&quot;:1897.6869615309556,&quot;y&quot;:415.4300614090651}" original-width="3840" original-height="5760" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100">
-  <picture>
-      <source media="(max-width: 600px)" srcset="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/a1c15667f7d3b1ad4364dab709eb07811eb0c207/original/jon-gomm-photo-by-leon-barker-2.jpg/!!/b%3AW1sicmVzaXplIiwxMjAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg">
-      <source media="(min-width: 601px)" srcset="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/a1c15667f7d3b1ad4364dab709eb07811eb0c207/original/jon-gomm-photo-by-leon-barker-2.jpg/!!/b%3AW1sicmVzaXplIiwxODAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg 1x, //d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/a1c15667f7d3b1ad4364dab709eb07811eb0c207/original/jon-gomm-photo-by-leon-barker-2.jpg/!!/b%3AW1sicmVzaXplIiwzMjAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg 2x">
+     <media-background-container>
+  <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100" fit="horizontal" style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-1.jpg);">
+    <picture>
+      <source media="(max-width: 600px)" srcset="images/slides/slide-1.jpg">
+      <source media="(min-width: 601px)" srcset="images/slides/slide-1.jpg 1x, images/slides/slide-1.jpg 2x">
+      <img src="images/slides/slide-1.jpg" alt="Slide 1">
+    </picture>
+  </media-background>
 
-    <img src="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/a1c15667f7d3b1ad4364dab709eb07811eb0c207/original/jon-gomm-photo-by-leon-barker-2.jpg/!!/b%3AW1sicmVzaXplIiwxODAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg">
-  </picture>
-</media-background><media-background crop-rect="{&quot;x&quot;:563.6816309368797,&quot;y&quot;:1889.3031625899057,&quot;w&quot;:3300.0000000000005,&quot;h&quot;:821.4285714285716}" focal-point="{&quot;x&quot;:1688.3006785559282,&quot;y&quot;:458.11292860243066}" original-width="4445" original-height="6660" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100">
-  <picture>
-      <source media="(max-width: 600px)" srcset="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/6cc9c62b23755205f6029a829d22b6724b831c5a/original/ards-guitar-22-hi-res-1-48.jpg/!!/b%3AW1sicmVzaXplIiwxMjAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg">
-      <source media="(min-width: 601px)" srcset="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/6cc9c62b23755205f6029a829d22b6724b831c5a/original/ards-guitar-22-hi-res-1-48.jpg/!!/b%3AW1sicmVzaXplIiwxODAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg 1x, //d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/6cc9c62b23755205f6029a829d22b6724b831c5a/original/ards-guitar-22-hi-res-1-48.jpg/!!/b%3AW1sicmVzaXplIiwzMjAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg 2x">
+  <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100" fit="horizontal" style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-2.jpg);">
+    <picture>
+      <source media="(max-width: 600px)" srcset="images/slides/slide-2.jpg">
+      <source media="(min-width: 601px)" srcset="images/slides/slide-2.jpg 1x, images/slides/slide-2.jpg 2x">
+      <img src="images/slides/slide-2.jpg" alt="Slide 2">
+    </picture>
+  </media-background>
 
-    <img src="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/6cc9c62b23755205f6029a829d22b6724b831c5a/original/ards-guitar-22-hi-res-1-48.jpg/!!/b%3AW1sicmVzaXplIiwxODAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg">
-  </picture>
-</media-background><media-background crop-rect="{&quot;x&quot;:0,&quot;y&quot;:315.14685567220056,&quot;w&quot;:2474.9999999999995,&quot;h&quot;:616.0714285714284}" focal-point="{&quot;x&quot;:1363.7566339401972,&quot;y&quot;:199.06997462681366}" original-width="2500" original-height="1667" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100">
-  <picture>
-      <source media="(max-width: 600px)" srcset="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/a70ff3fdd1eda78068c6d9c896f2bb4092ae3084/original/jon-gomm-photo-by-rob-spicer-6.jpg/!!/b%3AW1sicmVzaXplIiwxMjAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg">
-      <source media="(min-width: 601px)" srcset="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/a70ff3fdd1eda78068c6d9c896f2bb4092ae3084/original/jon-gomm-photo-by-rob-spicer-6.jpg/!!/b%3AW1sicmVzaXplIiwxODAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg 1x, //d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/a70ff3fdd1eda78068c6d9c896f2bb4092ae3084/original/jon-gomm-photo-by-rob-spicer-6.jpg/!!/b%3AW1sicmVzaXplIiwzMjAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg 2x">
-
-    <img src="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/a70ff3fdd1eda78068c6d9c896f2bb4092ae3084/original/jon-gomm-photo-by-rob-spicer-6.jpg/!!/b%3AW1sicmVzaXplIiwxODAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg">
-  </picture>
-</media-background><media-background crop-rect="{&quot;x&quot;:32.252756754557595,&quot;y&quot;:170.1388888888889,&quot;w&quot;:5775,&quot;h&quot;:1437.5}" focal-point="{&quot;x&quot;:2446.142069498697,&quot;y&quot;:662.8085242377383}" original-width="6000" original-height="4000" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100">
-  <picture>
-      <source media="(max-width: 600px)" srcset="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/3cc4083404806ecf789fe687fbc7515d50d32364/original/jon-gomm-photo-by-lawrence-wheeler-6.jpg/!!/b%3AW1sicmVzaXplIiwxMjAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg">
-      <source media="(min-width: 601px)" srcset="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/3cc4083404806ecf789fe687fbc7515d50d32364/original/jon-gomm-photo-by-lawrence-wheeler-6.jpg/!!/b%3AW1sicmVzaXplIiwxODAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg 1x, //d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/3cc4083404806ecf789fe687fbc7515d50d32364/original/jon-gomm-photo-by-lawrence-wheeler-6.jpg/!!/b%3AW1sicmVzaXplIiwzMjAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg 2x">
-
-    <img src="//d10j3mvrs1suex.cloudfront.net/s:bzglfiles/u/8045/3cc4083404806ecf789fe687fbc7515d50d32364/original/jon-gomm-photo-by-lawrence-wheeler-6.jpg/!!/b%3AW1sicmVzaXplIiwxODAwXSxbIm1heCJdLFsid2UiXV0%3D/meta%3AeyJzcmNCdWNrZXQiOiJiemdsZmlsZXMifQ%3D%3D.jpg">
-  </picture>
-</media-background>
-
+  <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100" fit="horizontal" style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-3.jpg);">
+    <picture>
+      <source media="(max-width: 600px)" srcset="images/slides/slide-3.jpg">
+      <source media="(min-width: 601px)" srcset="images/slides/slide-3.jpg 1x, images/slides/slide-3.jpg 2x">
+      <img src="images/slides/slide-3.jpg" alt="Slide 3">
+    </picture>
+  </media-background>
 </media-background-container>
+
 
 </div>
 
