--- a/index.html
+++ b/index.html
@@ -702,11 +702,8 @@
 
 			<div class="media-cta-container">
 				<div id="page_media_container" class="page-media-wrapper">
-    <div class="slideshow-container">
-  <img src="images/slides/slide-1.jpg" class="slideshow-slide" alt="Slide 1">
-  <img src="images/slides/slide-2.jpg" class="slideshow-slide" alt="Slide 2">
-  <img src="images/slides/slide-3.jpg" class="slideshow-slide" alt="Slide 3">
-</div>
+   <img src="images/slides/slide-1.jpg" alt="teste" style="width: 100%; max-width: 600px;">
+
 
 
 
