--- a/index.html
+++ b/index.html
@@ -702,7 +702,31 @@
 
 			<div class="media-cta-container">
 				<div id="page_media_container" class="page-media-wrapper">
-   <img src="images/slides/slide-1.jpg" alt="teste" style="width: 100%; max-width: 600px;">
+   <media-background-container>
+  <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100" fit="horizontal" style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-1.jpg);">
+    <picture>
+      <source media="(max-width: 600px)" srcset="images/slides/slide-1.jpg">
+      <source media="(min-width: 601px)" srcset="images/slides/slide-1.jpg 1x, images/slides/slide-1.jpg 2x">
+      <img src="images/slides/slide-1.jpg" alt="Slide 1">
+    </picture>
+  </media-background>
+
+  <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100" fit="horizontal" style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-2.jpg);">
+    <picture>
+      <source media="(max-width: 600px)" srcset="images/slides/slide-2.jpg">
+      <source media="(min-width: 601px)" srcset="images/slides/slide-2.jpg 1x, images/slides/slide-2.jpg 2x">
+      <img src="images/slides/slide-2.jpg" alt="Slide 2">
+    </picture>
+  </media-background>
+
+  <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100" fit="horizontal" style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-3.jpg);">
+    <picture>
+      <source media="(max-width: 600px)" srcset="images/slides/slide-3.jpg">
+      <source media="(min-width: 601px)" srcset="images/slides/slide-3.jpg 1x, images/slides/slide-3.jpg 2x">
+      <img src="images/slides/slide-3.jpg" alt="Slide 3">
+    </picture>
+  </media-background>
+</media-background-container>
 
 
 
