--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
     <form class="simple_form captcha cta-form-list-463121 member" id="new_member_cta" data-sitekey="6LdqEVEbAAAAAPn5e3TfpCQdFin6EZOLcmhS94PJ" data-controller="recaptcha" data-action="captchaDone-&gt;recaptcha#onDone" role="member" action="/news/call_to_action_header_features/463121/join" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="&#x2713;" autocomplete="off" /><input type="hidden" name="_method" value="put" autocomplete="off" />
       <div class="cta-heading-wrapper">
           <h2 class="mailing-list-title heading-primary cta-heading">
-            JOIN MY MAILING LIST
+            CONHEÇA A HISTÓRIA DE CASSIO VILACORTA
 </h2>      </div>
 
         <p class="mailing-list-description">
