--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
 </h2>      </div>
 
         <p class="mailing-list-description">
-          Be the first to know about my new music releases, and get a free track right now
+          Cantor, compositor, multi-instrumentista e proodutor musical paraense.
 </p>
 
       <div class="row">
