--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
 </h2>      </div>
 
         <p class="mailing-list-description">
-          Cantor, compositor, multi-instrumentista e proodutor musical paraense.
+          Cantor, compositor, multi-instrumentista e produtor musical paraense.
 </p>
 
       <div class="row">
