--- a/index.html
+++ b/index.html
@@ -668,6 +668,19 @@
 
 
 </head>
+	<!-- MENU DE ÍCONES SOCIAIS -->
+<nav class="social-icons">
+  <a href="https://www.instagram.com/cassio_vilacorta/" target="_blank" title="Instagram">
+    <img src="images/icon-instagram.png" alt="Instagram">
+  </a>
+  <a href="https://youtube.com/@cassio_vilacorta" target="_blank" title="YouTube">
+    <img src="images/icon-youtube.png" alt="YouTube">
+  </a>
+  <a href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank" title="Spotify">
+    <img src="images/icon-spotify.png" alt="Spotify">
+  </a>
+</nav>
+
   <body class="theme-beckett theme-beckett-e m-style-theme-config-635087 bz not-intro-page" data-slug="news" data-turbo="false" data-controller="live-chat no-pjax outbound-links" data-editor--editor-state-target="usersite" data-variant="e">
     
 
