--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head prefix="fb: http://www.facebook.com/2008/fbml og: http://opengraphprotocol.org/schema/">
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Jon Gomm</title>
+<title>Cassio Vilacorta</title>
 
 
 
