--- a/index.html
+++ b/index.html
@@ -708,7 +708,35 @@
 				</div>
 
 				<div class="nav-bar">
-					    <span id="toggle-mobile-menu" class="toggle-mobile-menu"><a href="javascript:"><i class="icon-hamburger"></i></a></span><nav id="main-nav" class="non-mobile" data-action="pageLoad@document-&gt;selected-page#mark" data-controller="selected-page"><ul class="horizontal list balance_4 top menu-length-8"><li class="top selected"><div><a class="top no-pjax" href="/news">NEWS</a></div></li><li class="top"><div><a class="top no-pjax" href="/shows">SHOWS</a></div></li><li class="has-submenu top"><div><a class="top" href="/store">STORE</a></div><ul><li class="subpage"><div><a class="" href="/the-faintest-idea-vinyl-book-cd">The Faintest Idea - Vinyl / Book / CD</a></div></li><li class="subpage"><div><a class="" href="/merch-clothes-accessories-art">Merch: Clothes / Accessories / Art</a></div></li><li class="subpage"><div><a class="" href="/guitar-tabs">Guitar Tabs</a></div></li><li class="subpage"><div><a class="" href="/lessons">Lessons</a></div></li><li class="subpage"><div><a class="" href="/cds-autographed-cds">CDs &amp; autographed CDs</a></div></li><li class="subpage"><div><a class="" href="/music-downloads">Music Downloads</a></div></li><li class="subpage"><div><a class="" href="/bundle-packs">Bundle Packs</a></div></li></ul></li><li class="has-submenu top"><div><a class="top" href="/music">MUSIC</a></div><ul><li class="subpage"><div><a class="" href="/watch">Watch</a></div></li><li class="subpage"><div><a class="" href="/listen">Listen</a></div></li><li class="subpage"><div><a class="" href="/lyrics">Lyrics</a></div></li></ul></li><li class="has-submenu top"><div><a class="top" href="/for-guitarists">FOR GUITARISTS</a></div><ul><li class="subpage"><div><a class="" href="/tab-techniques-tips">Tab, Techniques &amp; Tips</a></div></li><li class="subpage"><div><a class="" href="/gear">Gear</a></div></li><li class="subpage"><div><a class="" href="/video-lessons">Video Lessons</a></div></li><li class="subpage"><div><a class="" href="/bootcamp">Bootcamp</a></div></li></ul></li><li class="has-submenu top"><div><a class="top" href="/who">WHO?</a></div><ul><li class="subpage"><div><a class="" href="/biography">Biography</a></div></li><li class="subpage"><div><a class="" href="/interviews">Interviews</a></div></li></ul></li><li class="top"><div><a class="top" href="/contact">CONTACT</a></div></li><li class="top"><div><a class="top" href="/swan-song-project">SWAN SONG PROJECT</a></div></li></ul></nav>
+					    <span id="toggle-mobile-menu" class="toggle-mobile-menu"><a href="javascript:"><i class="icon-hamburger"></i></a></span><nav id="main-nav" class="non-mobile" data-action="pageLoad@document-&gt;selected-page#mark" data-controller="selected-page"><ul class="horizontal list balance_4 top menu-length-3">
+  <!-- Instagram -->
+  <li class="top">
+    <div>
+      <a class="top no-pjax" href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
+        <img src="images/icon-instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
+      </a>
+    </div>
+  </li>
+
+  <!-- YouTube -->
+  <li class="top">
+    <div>
+      <a class="top no-pjax" href="https://youtube.com/@cassio_vilacorta" target="_blank">
+        <img src="images/icon-youtube.png" alt="YouTube" style="width: 24px; height: 24px;">
+      </a>
+    </div>
+  </li>
+
+  <!-- Spotify -->
+  <li class="top">
+    <div>
+      <a class="top no-pjax" href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank">
+        <img src="images/icon-spotify.png" alt="Spotify" style="width: 24px; height: 24px;">
+      </a>
+    </div>
+  </li>
+</ul>
+</li><li class="has-submenu top"><div><a class="top" href="/music">MUSIC</a></div><ul><li class="subpage"><div><a class="" href="/watch">Watch</a></div></li><li class="subpage"><div><a class="" href="/listen">Listen</a></div></li><li class="subpage"><div><a class="" href="/lyrics">Lyrics</a></div></li></ul></li><li class="has-submenu top"><div><a class="top" href="/for-guitarists">FOR GUITARISTS</a></div><ul><li class="subpage"><div><a class="" href="/tab-techniques-tips">Tab, Techniques &amp; Tips</a></div></li><li class="subpage"><div><a class="" href="/gear">Gear</a></div></li><li class="subpage"><div><a class="" href="/video-lessons">Video Lessons</a></div></li><li class="subpage"><div><a class="" href="/bootcamp">Bootcamp</a></div></li></ul></li><li class="has-submenu top"><div><a class="top" href="/who">WHO?</a></div><ul><li class="subpage"><div><a class="" href="/biography">Biography</a></div></li><li class="subpage"><div><a class="" href="/interviews">Interviews</a></div></li></ul></li><li class="top"><div><a class="top" href="/contact">CONTACT</a></div></li><li class="top"><div><a class="top" href="/swan-song-project">SWAN SONG PROJECT</a></div></li></ul></nav>
 
 				</div>
 			</div>
