--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
     </div>
   </li>
 </ul>
-</li><li class="has-submenu top"><div><a class="top" href="/music">MUSIC</a></div><ul><li class="subpage"><div><a class="" href="/watch">Watch</a></div></li><li class="subpage"><div><a class="" href="/listen">Listen</a></div></li><li class="subpage"><div><a class="" href="/lyrics">Lyrics</a></div></li></ul></li><li class="has-submenu top"><div><a class="top" href="/for-guitarists">FOR GUITARISTS</a></div><ul><li class="subpage"><div><a class="" href="/tab-techniques-tips">Tab, Techniques &amp; Tips</a></div></li><li class="subpage"><div><a class="" href="/gear">Gear</a></div></li><li class="subpage"><div><a class="" href="/video-lessons">Video Lessons</a></div></li><li class="subpage"><div><a class="" href="/bootcamp">Bootcamp</a></div></li></ul></li><li class="has-submenu top"><div><a class="top" href="/who">WHO?</a></div><ul><li class="subpage"><div><a class="" href="/biography">Biography</a></div></li><li class="subpage"><div><a class="" href="/interviews">Interviews</a></div></li></ul></li><li class="top"><div><a class="top" href="/contact">CONTACT</a></div></li><li class="top"><div><a class="top" href="/swan-song-project">SWAN SONG PROJECT</a></div></li></ul></nav>
+</li></nav>
 
 				</div>
 			</div>
