--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
   <li class="top">
     <div>
       <a class="top no-pjax" href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
-        <img src="images/icon-instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
+        <img src="images/icons/instagram-branco.png" alt="Instagram" style="width: 24px; height: 24px;">
       </a>
     </div>
   </li>
@@ -712,7 +712,7 @@
   <li class="top">
     <div>
       <a class="top no-pjax" href="https://youtube.com/@cassio_vilacorta" target="_blank">
-        <img src="images/icon-youtube.png" alt="YouTube" style="width: 24px; height: 24px;">
+        <img src="images/icons/youtube-branco.png" alt="YouTube" style="width: 24px; height: 24px;">
       </a>
     </div>
   </li>
@@ -721,11 +721,12 @@
   <li class="top">
     <div>
       <a class="top no-pjax" href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank">
-        <img src="images/icon-spotify.png" alt="Spotify" style="width: 24px; height: 24px;">
+        <img src="images/icons/spotify-branco.png" alt="Spotify" style="width: 24px; height: 24px;">
       </a>
     </div>
   </li>
 </ul>
+
 </li></nav>
 
 				</div>
