--- a/index.html
+++ b/index.html
@@ -698,8 +698,7 @@
 				</div>
 
 				<div class="nav-bar">
-					    <span id="toggle-mobile-menu" class="toggle-mobile-menu"><a href="javascript:"><i class="icon-hamburger"></i></a></span><nav id="main-nav" class="non-mobile" data-action="pageLoad@document-&gt;selected-page#mark" data-controller="selected-page"><ul class="horizontal list balance_4 top menu-length-3">
-  <!-- Instagram -->
+					    <span id="toggle-mobile-menu" class="toggle-mobile-menu"><a href="javascript:"><i class="icon-hamburger"></i></a></span>
   <li class="top">
     <div>
       <a class="top no-pjax" href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
@@ -1340,12 +1339,7 @@
   Some images &copy; <span data-attributions-target="list"></span>
 </p>
 
-    <nav>
-  <ul>
-      <li class="if-logged-in"><a class="no-pjax link" rel="nofollow" data-method="delete" href="/user_sessions/logout">Log out</a></li>
-  </ul>
-</nav>
-
+ 
       <div class="branding text-tertiary">
     <small>
       <a title="Powered by Bandzoogle" target="_blank" rel="nofollow noopener" href="https://bandzoogle.com/?memref=r1f6d&amp;utm_source=member&amp;utm_medium=website&amp;utm_campaign=footer">Powered by Bandzoogle</a>
