--- a/index.html
+++ b/index.html
@@ -693,28 +693,22 @@
 			<!-- MENU SOCIAL FIXO -->
 <nav id="main-nav" class="menu-social" aria-label="Redes sociais">
   <ul class="menu-length-3">
-    <!-- Instagram -->
-    <li>
-      <a href="https://www.instagram.com/cassio_vilacorta/" target="_blank" aria-label="Instagram">
-        <img src="images/icons/instagram-branco.png" alt="Instagram" />
-      </a>
-    </li>
-
-    <!-- YouTube -->
-    <li>
-      <a href="https://youtube.com/@cassio_vilacorta" target="_blank" aria-label="YouTube">
-        <img src="images/icons/youtube-branco.png" alt="YouTube" />
-      </a>
-    </li>
-
-    <!-- Spotify -->
-    <li>
-      <a href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank" aria-label="Spotify">
-        <img src="images/icons/spotify-branco.png" alt="Spotify" />
-      </a>
-    </li>
-  </ul>
-</nav>
+  <li>
+    <a href="https://www.instagram.com/cassio_vilacorta/" target="_blank" title="Instagram">
+      <img src="images/icons/instagram-branco.png" alt="Instagram">
+    </a>
+  </li>
+  <li>
+    <a href="https://youtube.com/@cassio_vilacorta?si=Zx7J7sDcnw77V4Uc" target="_blank" title="YouTube">
+      <img src="images/icons/youtube-branco.png" alt="YouTube">
+    </a>
+  </li>
+  <li>
+    <a href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB?si=fpJmfyLWRqeCweriPmVnnA" target="_blank" title="Spotify">
+      <img src="images/icons/spotify-branco.png" alt="Spotify">
+    </a>
+  </li>
+</ul>
 			
 			<div class="title-nav-container" multiple-line underline>
 				<div id="title-wrap" class="title-wrap"
