--- a/index.html
+++ b/index.html
@@ -691,10 +691,8 @@
 	
 		<header id="page-header">
 			<!-- MENU SOCIAL FIXO -->
-<div style="text-align: center; margin: 40px 0;">
+<nav id="main-nav" class="menu-social" aria-label="Redes sociais">
   
-</div>
-
 			
 			<div class="title-nav-container" multiple-line underline>
 				<div id="title-wrap" class="title-wrap"
@@ -703,7 +701,7 @@
 				</div>
 
 				<div class="nav-bar">
-					    
+					    <span id="toggle-mobile-menu" class="toggle-mobile-menu"><a href="javascript:"><i class="icon-hamburger"></i></a></span>
   <li class="top">
     <div>
       <a class="top no-pjax" href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
@@ -1422,4 +1420,17 @@ if (!dontTrack && !inEditor) {
 
 </div>  </div>
 </div>
+
+<div class="nav-bar" style="display: flex; justify-content: center; gap: 20px; margin: 40px 0;">
+  <a href="https://www.youtube.com/@cassio.vilacorta" target="_blank">
+    <img src="images/icons/youtube.png" alt="YouTube" style="width: 40px; height: auto;">
+  </a>
+  <a href="https://open.spotify.com/intl-pt/artist/6kNYKv4Skbl7kRwNSsI6D9" target="_blank">
+    <img src="images/icons/spotify.png" alt="Spotify" style="width: 40px; height: auto;">
+  </a>
+  <a href="https://www.instagram.com/cassio.vilacorta/" target="_blank">
+    <img src="images/icons/instagram.png" alt="Instagram" style="width: 40px; height: auto;">
+  </a>
+</div>
+
 </body></html>
