--- a/index.html
+++ b/index.html
@@ -702,39 +702,18 @@
 					<h1 id="page-title" class="page-title display-type-logo text-fit"><a href="/"><span class="outer"><span class="inner"><img src="images/logos/cassio-vilacorta-logo.png" alt="Cassio Vilacorta"></span></span></a></h1>
 				</div>
 
-				<div class="nav-bar">
-					    
-  <li class="top">
-    <div>
-      <a class="top no-pjax" href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
-        <img src="images/icons/instagram-branco.png" alt="Instagram" style="width: 24px; height: 24px;">
-      </a>
-    </div>
-  </li>
+				<div class="nav-bar" style="display: flex; justify-content: center; gap: 20px; margin: 20px 0; list-style: none; padding: 0;">
+  <a class="no-pjax" href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
+    <img src="images/icons/instagram-branco.png" alt="Instagram" style="width: 24px; height: 24px;">
+  </a>
+  <a class="no-pjax" href="https://youtube.com/@cassio_vilacorta" target="_blank">
+    <img src="images/icons/youtube-branco.png" alt="YouTube" style="width: 24px; height: 24px;">
+  </a>
+  <a class="no-pjax" href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank">
+    <img src="images/icons/spotify-branco.png" alt="Spotify" style="width: 24px; height: 24px;">
+  </a>
+</div>
 
-  <!-- YouTube -->
-  <li class="top">
-    <div>
-      <a class="top no-pjax" href="https://youtube.com/@cassio_vilacorta" target="_blank">
-        <img src="images/icons/youtube-branco.png" alt="YouTube" style="width: 24px; height: 24px;">
-      </a>
-    </div>
-  </li>
-
-  <!-- Spotify -->
-  <li class="top">
-    <div>
-      <a class="top no-pjax" href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank">
-        <img src="images/icons/spotify-branco.png" alt="Spotify" style="width: 24px; height: 24px;">
-      </a>
-    </div>
-  </li>
-</ul>
-
-</li></nav>
-
-				</div>
-			</div>
 
 			<div class="media-cta-container">
 				<div id="page_media_container" class="page-media-wrapper">
