--- a/index.html
+++ b/index.html
@@ -749,17 +749,18 @@
 
 				
 					
-<div class="nav-bar">
-  <a href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
-    <img src="images/icons/instagram-branco.png" alt="Instagram">
-  </a>
-  <a href="https://youtube.com/@cassio_vilacorta" target="_blank">
-    <img src="images/icons/youtube-branco.png" alt="YouTube">
-  </a>
-  <a href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank">
-    <img src="images/icons/spotify-branco.png" alt="Spotify">
-  </a>
-</div>
+<div class="hero-content">
+  <div class="nav-bar">
+    <a href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
+      <img src="images/icons/instagram-branco.png" alt="Instagram">
+    </a>
+    <a href="https://youtube.com/@cassio_vilacorta" target="_blank">
+      <img src="images/icons/youtube-branco.png" alt="YouTube">
+    </a>
+    <a href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank">
+      <img src="images/icons/spotify-branco.png" alt="Spotify">
+    </a>
+  </div>
 
 <h2 class="welcome-text">
   CONHEÇA A HISTÓRIA DE CASSIO VILACORTA<br>
